--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="post_content">
                 Oi, <a href="https://www.google.com/" target="_blank">clique aqui</a> para fazer buscas no Google. E você também pode <a href="mailto:ivaneidethais@gmail.com">clicar aqui</a> para me mandar um e-mail.
             </p>
-            <p>
+            <p class="post_content">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lorem quam, hendrerit non porttitor ac, vulputate id massa. Morbi ac felis hendrerit, suscipit purus a, consectetur enim. Nam fermentum eros ac fringilla ultricies. Etiam at dictum eros. Vivamus cursus lacus eros, a suscipit ex hendrerit in. Aliquam ut elementum urna, eget tincidunt turpis. Nulla pharetra dolor fringilla tellus imperdiet commodo. Morbi tincidunt enim purus, elementum iaculis eros mollis eget. 
             </p>
         </article>
