--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
 
     <footer>
-        <ul>
+        <ul class="contacts_list">
             <li>
                 <a href="mailto:ivaneidethais@gmail.com">ivaneidethais@gmail.com</a>
             </li>
